tests/error/function_used.gw
#! [contains] already used by another value
var int i;
fun void i(){}
